--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "moment": "^2.29.4",
+    "mongodb": "^4.8.0",
     "mongoose": "^6.4.4",
     "nodemon": "^2.0.19"
   }
